justify-content: space-evenly instead of row gap to prevent horzontal overfill on mobile

--- a/plugins/backend/assets/pager.sass
+++ b/plugins/backend/assets/pager.sass
@@ -10,8 +10,7 @@ ul.pager
   @include clean-ul
   display: flex
   flex-wrap: nowrap
-  justify-content: center
-  column-gap: 2rem
+  justify-content: space-evenly
   margin-top: 2.5vw
   padding-top: 2.5vw
   margin-bottom: 5vw
@@ -46,4 +45,3 @@ ul.pager
     > a
       text-decoration: none
       color: $pagerText
-    /* > .pager-no-a
